--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -18,3 +18,5 @@ rand = "0.8"
 rcgen = "0.11"
 tokio = { version = "1, >=1.23.1", features = ["macros"] }
 rustls = "0.21"
+env_logger = { version = "0.10.0", default-features = false, features = ["auto-color"] }
+log = "0.4.19"
