--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ kvarn_utils = { path = "utils", version = "0.5.0" }
 kvarn_signal = { path = "signal", version = "0.1", optional = true }
 # Range because of vulnerability https://rustsec.org/advisories/RUSTSEC-2023-0001.html
 tokio = { version = "1, >=1.23.1", features = ["rt", "io-util", "fs", "sync", "parking_lot", "time", "macros"] }
-tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring", features = ["bytes"], optional = true }
+tokio-uring = { git = "https://github.com/Icelk/tokio-uring", branch = "recvmsg-msg_control", features = ["bytes"], optional = true }
 
 moka = { version = "0.11", features = ["sync"], default-features = false }
 dashmap = "5"
