--- a/signal/Cargo.toml
+++ b/signal/Cargo.toml
@@ -14,7 +14,7 @@ keywords = ["ipc", "kvarn"]
 [dependencies]
 log = "0.4"
 tokio = { version = "1, >=1.23.1", features = ["net", "time", "io-util", "rt", "fs", "sync", "macros"] }
-tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring", optional = true }
+tokio-uring = { git = "https://github.com/Icelk/tokio-uring", branch = "recvmsg-msg_control", optional = true }
 notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
 
 [features]
