--- a/async/Cargo.toml
+++ b/async/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kvarn_async"
-version = "0.5.0"
+version = "0.6.0"
 authors = ["Icelk <main@icelk.dev>"]
 edition = "2021"
 rust-version = "1.56"
@@ -14,6 +14,6 @@ categories = ["web-programming", "asynchronous"]
 
 [dependencies]
 bytes = "1"
-http = "0.2"
-kvarn_utils = { path = "../utils", version = "0.5" }
-tokio = { version = "1, >=1.23.1", features = ["rt", "io-util", "fs", "sync", "parking_lot", "time"] }
+http = "1.0"
+kvarn_utils = { path = "../utils", version = "0.6" }
+tokio = { version = "1.24", features = ["rt", "io-util", "fs", "sync", "parking_lot", "time"] }
