--- a/ctl/Cargo.toml
+++ b/ctl/Cargo.toml
@@ -15,11 +15,11 @@ categories = ["command-line-utilities"]
 [dependencies]
 clap = { version = "4", features = ["cargo"] }
 clap_autocomplete = { version = ">= 0.4.1", optional = true }
-env_logger = { version = "0.10", default-features = false, features = ["auto-color", "humantime"] }
-kvarn_signal = { path = "../signal", version = "0.1" }
-kvarn_utils = { path = "../utils", version = "0.5" }
+env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
+kvarn_signal = { path = "../signal", version = "0.2" }
+kvarn_utils = { path = "../utils", version = "0.6" }
 log = "0.4"
-tokio = { version = "1, >=1.23.1", features = ["rt", "io-util", "macros", "time"] }
+tokio = { version = "1.24", features = ["rt", "io-util", "macros", "time"] }
 
 [features]
 default = ["completion"]
