--- a/signal/Cargo.toml
+++ b/signal/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kvarn_signal"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Icelk <main@icelk.dev>"]
 edition = "2021"
 rust-version = "1.56"
@@ -13,8 +13,9 @@ keywords = ["ipc", "kvarn"]
 
 [dependencies]
 log = "0.4"
-tokio = { version = "1, >=1.23.1", features = ["net", "time", "io-util", "rt", "fs", "sync", "macros"] }
-tokio-uring = { git = "https://github.com/Icelk/tokio-uring", branch = "recvmsg-msg_control", optional = true }
+tokio = { version = "1.24", features = ["net", "time", "io-util", "rt", "fs", "sync", "macros"] }
+# tokio-uring = { git = "https://github.com/Icelk/tokio-uring", branch = "recvmsg-msg_control", optional = true }
+tokio-uring = { version = "0.4.0-alpha1", package = "kvarn-tokio-uring", optional = true }
 notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
 
 [features]
