--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kvarn_testing"
-version = "0.5.0"
+version = "0.6.0"
 authors = ["Icelk <main@icelk.dev>"]
 edition = "2021"
 rust-version = "1.56"
@@ -12,11 +12,11 @@ license = "Apache-2.0"
 categories = ["web-programming", "development-tools::testing"]
 
 [dependencies]
-kvarn = { path = "../", features = ["full"], version = "0.5.0" }
+kvarn = { path = "../", features = ["full"], version = "0.6.0" }
 reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-manual-roots"] }
 rand = "0.8"
-rcgen = "0.11"
-tokio = { version = "1, >=1.23.1", features = ["macros"] }
-rustls = "0.21"
-env_logger = { version = "0.10.0", default-features = false, features = ["auto-color"] }
+rcgen = "0.12"
+tokio = { version = "1.24", features = ["macros"] }
+rustls = "0.22"
+env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
 log = "0.4.19"
