--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kvarn_utils"
-version = "0.5.0"
+version = "0.6.0"
 authors = ["Icelk <main@icelk.dev>"]
 edition = "2021"
 rust-version = "1.56"
@@ -13,8 +13,8 @@ keywords = ["web-server", "utilities"]
 categories = ["web-programming", "parsing"]
 
 [dependencies]
-log = "^0.4"
-bytes = "^1"
-http = "^0.2"
-percent-encoding = "^2.1.0"
-compact_str = "0.7.0"
+log = "0.4"
+bytes = "1"
+http = "1.0"
+percent-encoding = "2.3"
+compact_str = "0.7"
