Final 0.6 release things. It's all out now!

--- a/extensions/Cargo.toml
+++ b/extensions/Cargo.toml
@@ -21,7 +21,7 @@ tokio-uring = { version = "0.4.0-alpha1", package = "kvarn-tokio-uring", feature
 async_chunked_transfer = "1.4"
 percent-encoding = { version = "2", optional = true }
 memchr = "2"
-url-crawl = { path = "../url-crawl", optional = true }
+url-crawl = { version = "0.2", path = "../url-crawl", optional = true }
 small-acme = { version = "0.2.2", optional = true }
 x509-parser = { version = "0.15", optional = true }
 rustls = { version = "0.22", optional = true, default-features = false }
