--- a/ctl/Cargo.toml
+++ b/ctl/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kvarnctl"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["Icelk <main@icelk.dev>"]
 edition = "2021"
 rust-version = "1.56"
@@ -14,7 +14,7 @@ categories = ["command-line-utilities"]
 
 [dependencies]
 clap = { version = "4", features = ["cargo"] }
-clap_autocomplete = { version = ">= 0.4.1", optional = true }
+clap_autocomplete = { version = "0.4.1", optional = true }
 env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
 kvarn_signal = { path = "../signal", version = "0.2" }
 kvarn_utils = { path = "../utils", version = "0.6" }
