--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,7 +69,7 @@ x509-parser = { version = "0.16", optional = true }
 # Compression
 brotli = { version = "6", optional = true }
 flate2 = { version = "1", optional = true }
-zstd = { version = "0.13", optional = true, default-features = false, features = ["fat-lto"] }
+zstd = { version = "0.13", optional = true, default-features = false }
 
 # WebSockets
 tokio-tungstenite = { version = "0.21", optional = true, default-features = false }
